Get MathJAX over https

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,5 @@
 		extensions: ["[Contrib]/siunitx/siunitx.js"]
 	});
 	</script>
-    <script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-	</script>
+    <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 </head>
