--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <link rel="stylesheet" href="{{ site.baseurl }}/assets/fa/css/font-awesome.min.css">
 
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
