--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,8 +14,9 @@
       </a>
 
       <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
+        {% assign pages = site.pages | sort: "weight" %}
+        {% for page in pages %}
+          {% if page.mainmenu %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
