--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -6,11 +6,15 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
+
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
 
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/fa/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/buildacell.css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
