Add 'Join Slack' to top nav

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -25,6 +25,8 @@
               <a class="page-link" href="{{ page.url | relative_url }}">{{ page.title }}</a>
               {% endif %}
             {% endfor %}
+            <span class="nav-divide"></span>
+            <a class="page-link" href="http://buildacell-invite.herokuapp.com">Join Slack</a>
         </div>
       </nav>
     {% endif %}
