Edit goes to edit not blob

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="wrapper">
     <h2 class="footer-heading">
       {{ site.title | escape }}
-      <a class="footer-edit-link" href="{{site.github.repository_url}}/blob/master/docs/{{page.path}}">Edit this page</a>
+      <a class="footer-edit-link" href="{{site.github.repository_url}}/edit/master/docs/{{page.path}}">Edit this page</a>
     </h2>
 
     <div class="footer-col-wrapper">
