--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -27,6 +27,7 @@
             {% endfor %}
             <span class="nav-divide"></span>
             <a class="page-link" href="http://buildacell-invite.herokuapp.com">Join Slack</a>
+          <a class="page-link" href="http://buildacell.io">Build-a-cell</a>
         </div>
       </nav>
     {% endif %}
