--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -3,7 +3,6 @@
   <div class="wrapper">
     <h2 class="footer-heading">
       {{ site.title | escape }}
-      <a class="footer-edit-link" href="{{site.github.repository_url}}/edit/master/docs/{{page.path}}">Edit this page</a>
     </h2>
 
     <div class="footer-col-wrapper">
@@ -26,6 +25,9 @@
       </div>
 
       <div class="footer-col footer-col-3">
+                            <li>
+                        <a href="https://twitter.com/buildacell" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    </li>
         <p>The latest DOI release is <a href="https://zenodo.org/badge/latestdoi/72226803"><img src="https://zenodo.org/badge/72226803.svg" alt="DOI"></a>.</p>
       </div>
     </div>
